Let visit Siemreap version3

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/images/icon.png">
+    <link rel="icon" href="./images/icon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bayon&family=Content:wght@400;700&family=Dangrek&family=Kantumruy+Pro&display=swap" rel="stylesheet">
     <style> @import url('https://fonts.googleapis.com/css2?family=Bayon&family=Content:wght@400;700&family=Dangrek&family=Kantumruy+Pro&display=swap'); </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-    <link rel="stylesheet" href="home.css">
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/header.css">
     <title>តស់ ទៅលេងសៀមរាប</title>
 </head>
 <body>
     <div class="header">
         <nav id="menu">
-            <img src="/images/logo4.png" alt="" class="logo">
+            <img src="./images/logo4.png" alt="" class="logo">
             <ul class="nav-links">
                 <li>
                     <a href="#temple" class="active">ប្រាសាទ</a>
@@ -30,7 +30,7 @@
                     <a href="#contact" class="active">ទំនាក់ទំនង</a>
                 </li>
             </ul>
-                <img src="/images/moon2.png" alt="" id="icon">
+                <img src="./images/moon2.png" alt="" id="icon">
             <i class="fas fa-bars" onclick="togglebtn()"></i>
         </nav>
         <div class="greeting">
@@ -42,8 +42,8 @@
         <h2 class="sub-title">ប្រាសាទល្បីៗក្នុងខេត្តសៀមរាប</h2>
         <div class="temple">
             <div>
-                <a href="angkorwat.html">
-                    <img src="/images/temple/angkorwat.jpg" alt="">
+                <a href="./angkorwat.html">
+                    <img src="./images/temple/angkorwat.jpg" alt="">
                     <div class="overlay">
                         <span >
                             <h3>
@@ -54,8 +54,8 @@
                 </a>
             </div>
             <div>
-                <a href="bayon.html">
-                    <img src="/images/temple/bayon.jpg" alt="">
+                <a href="./bayon.html">
+                    <img src="./images/temple/bayon.jpg" alt="">
                     <div class="overlay">
                         <span>
                             <h3>
@@ -66,8 +66,8 @@
                 </a>
             </div>
             <div>
-                <a href="/html/banteaysrey.html">
-                    <img src="/images/temple/banteay_srey.jpg" alt="">
+                <a href="./banteaysrey.html">
+                    <img src="./images/temple/banteay_srey.jpg" alt="">
                     <div class="overlay">
                         <span>
                             <h3>
@@ -79,7 +79,7 @@
                 </a>
             </div>
             <div>
-                <img src="/images/temple/preah_khan.jpg" alt="">
+                <img src="./images/temple/preah_khan.jpg" alt="">
                 <div class="overlay">
                     <span>
                         <h3>
@@ -89,7 +89,7 @@
                 </div>
             </div>
             <div>
-                <img src="/images/temple/neak_porrn.jpeg" alt="">
+                <img src="./images/temple/neak_porrn.jpeg" alt="">
                 <div class="overlay">
                     <span>
                         <h3>
@@ -99,7 +99,7 @@
                 </div>
             </div>
             <div>
-                <img src="/images/temple/bakhaeng.jpg" alt="">
+                <img src="./images/temple/bakhaeng.jpg" alt="">
                 <div class="overlay">
                     <span>
                         <h3>
@@ -109,7 +109,7 @@
                 </div>
             </div>
             <div>
-                <img src="/images/temple/bapoun.jpg" alt="">
+                <img src="./images/temple/bapoun.jpg" alt="">
                 <div class="overlay">
                     <span>
                         <h3>
@@ -119,7 +119,7 @@
                 </div>
             </div>
             <div>
-                <img src="/images/temple/taprom.jpg" alt="">
+                <img src="./images/temple/taprom.jpg" alt="">
                 <div class="overlay">
                     <span>
                         <h3>
@@ -129,7 +129,7 @@
                 </div>
             </div>
             <div>
-                <img src="/images/temple/kravan.png" alt="">
+                <img src="./images/temple/kravan.png" alt="">
                 <div class="overlay">
                     <span>
                         <h3>
@@ -139,7 +139,7 @@
                 </div>
             </div>
             <div>
-                <img src="/images/temple/bengmealea.jpg" alt="">
+                <img src="./images/temple/bengmealea.jpg" alt="">
                 <div class="overlay">
                     <span>
                         <h3>
@@ -151,35 +151,35 @@
         </div>
     </div>
     <div class="container" id="nature">
-            <h2 class="sub-title">តំបន់ទេសចរណ៍ធម្មជាតិ</h2>
+            <h2 class="sub-title">តំបន់គយគន់ធម្មជាតិ</h2>
             <div class="nature">
                 <div>
-                    <a href="nature.html#quadbike" >
+                    <a href="./nature.html#quadbike" >
                         <img src="/images/nature/quadBike.png" alt="">
                         <h3>ជិះម៉ូតូកង់បួនគយគន់ធម្មជាតិ</h3>
                     </a>
                 </div>
                 <div>
-                    <a href="nature.html#ferriswheel">
+                    <a href="./nature.html#ferriswheel">
                         <img src="/images/nature/angkorEye.jpg" alt="">
                         <h3>ទស្សនាសៀមរាបពីលើអាកាស</h3>
                     </a>
                 </div>
                 <div>
-                    <a href="nature.html">
+                    <a href="./nature.html">
                         <img src="/images/nature/airballoon.jpg" alt="">
                         <h3>ជិះប៊ូឡុងហោះមើលថ្ងៃលិច</h3>
                     </a>
                 </div>
                 <div>
-                    <a href="nature.html">
+                    <a href="./nature.html">
                         <img src="/images/nature/koulenwaterfall.jpg" alt="">
                         <h3>ទឹកធ្លាក់ភ្នំគូលេន</h3>
                     </a>
                 </div>   
             </div>
             <div class="btnMore">
-                <a href="nature.html">
+                <a href="./nature.html">
                     <button>អានលម្អិត</button>
                 </a>
                 
@@ -189,7 +189,7 @@
         <h2 class="sub-title">កន្លែងដែលមិនគួររំលង</h2>
         <div class="mustSee">
             <div>
-                <img src="/images/mustSee/preahdak.jpg" alt="">
+                <img src="./images/mustSee/preahdak.jpg" alt="">
                 <span>
                     <h3>
                         ភូមិព្រះដាក់
@@ -197,7 +197,7 @@
                 </span>
             </div>
             <div>
-                <img src="/images/mustSee/srlake.jpg" alt="">
+                <img src="./images/mustSee/srlake.jpg" alt="">
                 <span>
                     <h3>
                         ដងស្ទឹងសៀមរាប
@@ -205,7 +205,7 @@
                 </span>
             </div>
             <div>
-                <img src="/images/mustSee/kampongplouk.jpg" alt="">
+                <img src="./images/mustSee/kampongplouk.jpg" alt="">
                 <span>
                     <h3>
                         រមណីយដ្ឋាន​ភូមិ​លិច​ទឹក​កំពង់ភ្លុក
@@ -213,7 +213,7 @@
                 </span>
             </div>
             <div>
-                <img src="/images/mustSee/phnomkrom.jpg" alt="">
+                <img src="./images/mustSee/phnomkrom.jpg" alt="">
                 <span>
                     <h3>
                         គយគន់​ថ្ងៃ​លិច​នៅ​ភ្នំ​ក្រោម
@@ -245,24 +245,24 @@
         <h3>ក្រុមរបស់យើង</h3>
         <div class="profile">
                 <a href="https://facebook.com/mengleang.deaun" target="_blank">
-                    <img src="/images/ourTeam/mengleang.jpg" alt="">
+                    <img src="./images/ourTeam/mengleang.jpg" alt="">
                    <span>Deaun Mengleang</span>
                 </a>
                 <a href="https://web.facebook.com/profile.php?id=100026261990477" target="_blank">
-                    <img src="/images/ourTeam/savin.jpg" alt="">
+                    <img src="./images/ourTeam/savin.jpg" alt="">
                     <span>Em Savin</span>
                 </a>
 
                 <a href="https://web.facebook.com/nak.kh.7777" target="_blank">
-                    <img src="/images/ourTeam/vannak.JPG" alt="">
+                    <img src="./images/ourTeam/vannak.JPG" alt="">
                     <span>Chhoeng Vannak</span>
                 </a>
                 <a href="https://web.facebook.com/pheavin.eang" target="_blank">
-                    <img src="/images/ourTeam/pheavin.JPG" alt="">
+                    <img src="./images/ourTeam/pheavin.JPG" alt="">
                     <span>Eang Pheavin</span>
                 </a>
                 <a href="https://web.facebook.com/pheavin.eang" target="_blank">
-                    <img src="/images/ourTeam/phalkun.jpg" alt="">
+                    <img src="./images/ourTeam/phalkun.jpg" alt="">
                     <span>Heng Nobphalkun</span>
                 </a>
             </div>  
@@ -295,7 +295,7 @@
 
    
 </body>
-<script src="home.js"  defer></script>
-<script src="action.js" ></script>
+<script src="./javascript/home.js"  defer></script>
+<script src="./javascript/action.js" ></script>
 
 </html>
