--- a/angkorwat.html
+++ b/angkorwat.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="/images/icon.png">
+        <link rel="icon" href="./images/icon.png">
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bayon&family=Content:wght@400;700&family=Dangrek&family=Kantumruy+Pro&display=swap" rel="stylesheet">
         <style> @import url('https://fonts.googleapis.com/css2?family=Bayon&family=Content:wght@400;700&family=Dangrek&family=Kantumruy+Pro&display=swap'); </style>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.1/css/bootstrap.min.css">
-        <link rel="stylesheet" href="header.css">
-        <link rel="stylesheet" href="angkorwat.css">
-        <link rel="stylesheet" href="footer.css">
+        <link rel="stylesheet" href="./css/header.css">
+        <link rel="stylesheet" href="./css/angkorwat.css">
+        <link rel="stylesheet" href="./css/footer.css">
         
         <title>ប្រាសាទ​អង្គរវត្ត</title>
     </head>
@@ -214,7 +214,7 @@
         </div>
     </div>
 </body>
-<script src="./action.js" ></script>
-<script src="./angkorwat.js" defer ></script>
+<script src="./javascript/action.js" ></script>
+<script src="./javascript/angkorwat.js" defer ></script>
 
 </html>
