--- a/banteaysrey.html
+++ b/banteaysrey.html
@@ -4,42 +4,42 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="/images/icon.png">
+        <link rel="icon" href="./images/icon.png">
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bayon&family=Content:wght@400;700&family=Dangrek&family=Kantumruy+Pro&display=swap" rel="stylesheet">
         <style> @import url('https://fonts.googleapis.com/css2?family=Bayon&family=Content:wght@400;700&family=Dangrek&family=Kantumruy+Pro&display=swap'); </style>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.1/css/bootstrap.min.css">
-        <link rel="stylesheet" href="header.css">
-        <link rel="stylesheet" href="angkorwat.css">
-        <link rel="stylesheet" href="banteaysrey.css">
-        <link rel="stylesheet" href="footer.css">
+        <link rel="stylesheet" href="./css/header.css">
+        <link rel="stylesheet" href="./css/angkorwat.css">
+        <link rel="stylesheet" href="./css/banteaysrey.css">
+        <link rel="stylesheet" href="./css/footer.css">
         
         <title>ប្រាសាទបន្ទាយស្រី</title>
     </head>
 <body>
     <nav id="menu" style="background-color: black;" >
-        <img src="/images/logo4.png" alt="" class="logo">
+        <img src="./images/logo4.png" alt="" class="logo">
         <ul class="nav-links">
             <li>
-                <a href="/index.html" class="active" >ទំព័រដើម</a>
+                <a href="./index.html" class="active" >ទំព័រដើម</a>
             </li>
             <li>
-                <a href="/index.html#temple" class="active">ប្រាសាទ</a>
+                <a href="./index.html#temple" class="active">ប្រាសាទ</a>
             </li>
             <li>
-                <a href="/index.html#nature" class="active">ធម្មជាតិ</a>
+                <a href="./index.html#nature" class="active">ធម្មជាតិ</a>
             </li>
             <li>
-                <a href="/html/banteaysrey.html#contact" class="active">ទំនាក់ទំនង</a>
+                <a href="./html/banteaysrey.html#contact" class="active">ទំនាក់ទំនង</a>
             </li>
         </ul>
-            <img src="/images/moon2.png" alt="" id="icon">
+            <img src="./images/moon2.png" alt="" id="icon">
         <i class="fas fa-bars" onclick="togglebtn()"></i>   
 </nav>
 <div class="container mb-4">
     <div class="d-flex justify-content-between mb-3 align-items-center" >
         <h2>សូមស្វាគមន៍មកកាន់ប្រាសាទបន្ទាយស្រី</h2>
-        <a href="/index.html#temple" class="btn btn-outline-primary d-flex align-items-center"><i class="fa-solid fa-arrow-left"></i>  &nbsp;ត្រឡប់ក្រោយ</a>
+        <a href="./index.html#temple" class="btn btn-outline-primary d-flex align-items-center"><i class="fa-solid fa-arrow-left"></i>  &nbsp;ត្រឡប់ក្រោយ</a>
     </div>
     <div class="row">
         <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 slide-container ">
@@ -79,24 +79,24 @@
                     <h3>ក្រុមរបស់យើង</h3>
                     <div class="profile">
                             <a href="https://facebook.com/mengleang.deaun" target="_blank">
-                                <img src="/images/ourTeam/mengleang.jpg" alt="">
+                                <img src="./images/ourTeam/mengleang.jpg" alt="">
                                <span>Deaun Mengleang</span>
                             </a>
                             <a href="https://web.facebook.com/profile.php?id=100026261990477" target="_blank">
-                                <img src="/images/ourTeam/savin.jpg" alt="">
+                                <img src="./images/ourTeam/savin.jpg" alt="">
                                 <span>Em Savin</span>
                             </a>
             
                             <a href="https://web.facebook.com/nak.kh.7777" target="_blank">
-                                <img src="/images/ourTeam/vannak.JPG" alt="">
+                                <img src="./images/ourTeam/vannak.JPG" alt="">
                                 <span>Chhoeng Vannak</span>
                             </a>
                             <a href="https://web.facebook.com/pheavin.eang" target="_blank">
-                                <img src="/images/ourTeam/pheavin.JPG" alt="">
+                                <img src="./images/ourTeam/pheavin.JPG" alt="">
                                 <span>Eang Pheavin</span>
                             </a>
                             <a href="https://web.facebook.com/" target="_blank">
-                                <img src="/images/ourTeam/phalkun.jpg" alt="">
+                                <img src="./images/ourTeam/phalkun.jpg" alt="">
                                 <span>Heng Nobphalkun</span>
                             </a>
                         </div>  
@@ -130,7 +130,7 @@
     </div>
 </div>
 </body>
-<script src="action.js" ></script>
-<script src="banteaysrey.js" defer></script>
+<script src="./javascript/action.js" ></script>
+<script src="./javascript/banteaysrey.js" defer></script>
 <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 </html>
