Fix font size on some pages

--- a/angkorwat.html
+++ b/angkorwat.html
@@ -17,7 +17,7 @@
     </head>
 <body>
     <nav id="menu" style="background-color: black;" >
-            <img src="/images/logo4.png" alt="" class="logo">
+            <img src="./images/logo4.png" alt="" class="logo">
             <ul class="nav-links">
                 <li>
                     <a href="./index.html" class="active" >ទំព័រដើម</a>
@@ -155,7 +155,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid pb-3" style="background-color: black;" id="contact" >
+    <div class="container-fluid pb-3 pt-5" style="background-color: black;" id="contact" >
         <div class="container mt-0 pt-0 ">
             <div class="row">
                 <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 ">
@@ -203,8 +203,8 @@
                 <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12">
                     <div class="contactUs" >
                         <h3>ទំនាក់ទំនង</h3>
-                        <a href="#"> <i class="fa-solid fa-phone"></i> <span>023 880 880</span> </a>
-                        <a href="#"> <i class="fa-regular fa-envelope"></i> <span>pizzacompany@gmail.com</span> </a>
+                        <a href="#"> <i class="fa-solid fa-phone"></i> <span>0975 450 540</span> </a>
+                        <a href="#"> <i class="fa-regular fa-envelope"></i> <span>mengleangdeaun@gmail.com</span> </a>
                         <a href="#"> <i class="fa-solid fa-location-dot"></i> <span>Phnom Penh, Cambodia</span></a>
                     </div>
                 </div>
