--- a/banteaysrey.html
+++ b/banteaysrey.html
@@ -30,7 +30,7 @@
                 <a href="./index.html#nature" class="active">ធម្មជាតិ</a>
             </li>
             <li>
-                <a href="./html/banteaysrey.html#contact" class="active">ទំនាក់ទំនង</a>
+                <a href="#contact" class="active">ទំនាក់ទំនង</a>
             </li>
         </ul>
             <img src="./images/moon2.png" alt="" id="icon">
@@ -38,7 +38,7 @@
 </nav>
 <div class="container mb-4">
     <div class="d-flex justify-content-between mb-3 align-items-center" >
-        <h2>សូមស្វាគមន៍មកកាន់ប្រាសាទបន្ទាយស្រី</h2>
+        <h2>ប្រាសាទបន្ទាយស្រី</h2>
         <a href="./index.html#temple" class="btn btn-outline-primary d-flex align-items-center"><i class="fa-solid fa-arrow-left"></i>  &nbsp;ត្រឡប់ក្រោយ</a>
     </div>
     <div class="row">
@@ -71,7 +71,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid pb-3" style="background-color: black;" id="contact">
+<div class="container-fluid pb-3 pt-5" style="background-color: black;" id="contact">
     <div class="container mt-0 pt-0 ">
         <div class="row">
             <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 ">
@@ -119,8 +119,8 @@
             <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12">
                 <div class="contactUs" >
                     <h3>ទំនាក់ទំនង</h3>
-                    <a href="#"> <i class="fa-solid fa-phone"></i> <span>023 880 880</span> </a>
-                    <a href="#"> <i class="fa-regular fa-envelope"></i> <span>pizzacompany@gmail.com</span> </a>
+                    <a href="#"> <i class="fa-solid fa-phone"></i> <span>0975 450 540</span> </a>
+                    <a href="#"> <i class="fa-regular fa-envelope"></i> <span>mengleangdeaun@gmail.com</span> </a>
                     <a href="#"> <i class="fa-solid fa-location-dot"></i> <span>Phnom Penh, Cambodia</span></a>
                 </div>
             </div>
