--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             <p>ខេត្តសៀមរាប​ ជា​ទីបណ្តុំ​នៃ​ប្រាសាទបុរាណ​ជា​ច្រើន​ដែល​ស្ថិត​នៅ​ក្នុង​បញ្ជី​របស់​UNESCO​ ត្រូវ​បាន​គេ​បោះ​ឆ្នោត​ឱ្យ​ស្ថិត​នៅ​លេខ​រៀង​លំដាប់​ទី​៥ ​ក្នុង​ចំណោម​គោលដៅ​ទេសចរណ៍​ល្បីៗ​ចំនួន​២៥​ទូ​ទាំង​ពិភពលោក​កាលពី​ឆ្នាំ​២០១៥​ គួរ​បញ្ជាក់​ដែរ​ថា​ កាលពី​ឆ្នាំ​២០១៤ សៀមរាប​ បាន​ស្ថិត​នៅ​លំដាប់​លេខ​រៀង​ទី​ ២​ ដែល​ចំណាត់ថ្នាក់​ធ្វើ​ឡើង​ដោយ​ ​ TripAdvisor​ ជា​គេហទំព័រ​អន​ឡាញ​ដ៏​ពេញ​និយម​សម្រាប់​អ្នក​ធ្វើ​ដំណើរ​នានា​ ហើយ​ក៏​ជា​គេហទំព័រ​មួយ​ដែល​ត្រូវ​បាន​ទទួល​ការ​ជឿ​ទុកចិត្ត​ច្រើន​ពី​សំណាក់​អ្នក​ទេសចរណ៍​ក្នុង​ការ​ជ្រើសរើស​គោលដៅ​ទេសចរណ៍​នានា​ជុំវិញ​ពិភពលោក​។</p>
         </div>
     </div>       
-<div class="row footer container" id="contact">
+<div class="row footer" id="contact">
     <div class="ourTeam">
         <h3>ក្រុមរបស់យើង</h3>
         <div class="profile">
@@ -261,7 +261,7 @@
                     <img src="./images/ourTeam/pheavin.JPG" alt="">
                     <span>Eang Pheavin</span>
                 </a>
-                <a href="https://web.facebook.com/pheavin.eang" target="_blank">
+                <a href="https://web.facebook.com/" target="_blank">
                     <img src="./images/ourTeam/phalkun.jpg" alt="">
                     <span>Heng Nobphalkun</span>
                 </a>
@@ -281,8 +281,8 @@
     </div>
     <div class="contactUs" >
         <h3>ទំនាក់ទំនង</h3>
-        <a href="#"> <i class="fa-solid fa-phone"></i> <span>023 880 880</span> </a>
-        <a href="#"> <i class="fa-regular fa-envelope"></i> <span>pizzacompany@gmail.com</span> </a>
+        <a href="#"> <i class="fa-solid fa-phone"></i> <span>097 5 450 540</span> </a>
+        <a href="#"> <i class="fa-regular fa-envelope"></i> <span>mengleangdeaun@gmail.com</span> </a>
         <a href="#"> <i class="fa-solid fa-location-dot"></i> <span>Phnom Penh, Cambodia</span></a>
     </div>
 </div>
