--- a/nature.html
+++ b/nature.html
@@ -27,10 +27,10 @@
                 <a href="./index.html#temple" class="active">ប្រាសាទ</a>
             </li>
             <li>
-                <a href="./index.html#nature" class="active">ធម្មជាតិ</a>
+                <a href="./index.html#mustSee" class="active">តំបន់ល្បីៗ</a>
             </li>
             <li>
-                <a href="./html/nature.html#mustSee" class="active">តំបន់ល្បីៗ</a>
+                <a href="#contact" class="active">ទំនាក់ទំនង</a>
             </li>
 
         </ul>
@@ -167,7 +167,7 @@
     </div>      
 </div>
 
-<div class="container-fluid pb-3" style="background-color: black;" >
+<div class="container-fluid pb-3 pt-5" style="background-color: black;" id="contact" >
     <div class="container mt-0 pt-0 ">
         <div class="row">
             <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 ">
@@ -215,8 +215,8 @@
             <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12">
                 <div class="contactUs" >
                     <h3>ទំនាក់ទំនង</h3>
-                    <a href="#"> <i class="fa-solid fa-phone"></i> <span>023 880 880</span> </a>
-                    <a href="#"> <i class="fa-regular fa-envelope"></i> <span>pizzacompany@gmail.com</span> </a>
+                    <a href="#"> <i class="fa-solid fa-phone"></i> <span>0975 450 540</span> </a>
+                    <a href="#"> <i class="fa-regular fa-envelope"></i> <span>mengleangdeaun@gmail.com</span> </a>
                     <a href="#"> <i class="fa-solid fa-location-dot"></i> <span>Phnom Penh, Cambodia</span></a>
                 </div>
             </div>
