Fix feature link on angkorwat and bayon page

--- a/bayon.html
+++ b/bayon.html
@@ -47,7 +47,7 @@
             <a href="./index.html#temple" class="btn btn-outline-primary d-flex align-items-center"><i class="fa-solid fa-arrow-left"></i>  &nbsp;ត្រឡប់ក្រោយ</a>
         </div>
         <div class="row">
-            <div class="col-xxl-5 col-xl-5 col-lg-5 col-md-12 col-sm-12 col-12 mt-2 content">
+            <div class="col-xxl-5 col-xl-5 col-lg-5 col-md-12 col-sm-12 col-12 mt-2 mb-3 content">
                 <img src="./images/temple/bayon-2.jpg" alt="" class="img-fluid rounded mb-3">
                 <p>ប្រាសាទបាយ័ន មានទីតាំងស្ថិតនៅចំកណ្តាល នៃក្រុងអង្គរធំ។ ប្រាសាទនេះកសាងនៅចុងសតវត្សរ៍ទី ១២ និងដើមសតវត្សរ៍ទី ១៣ ដោយព្រះបាទជ័យវរ្ម័នទី៧។ ប្រាសាទនេះ មានតួប៉មជាមុខចំនួនបួន នៅលើកំពូល៤៩ និងកំពូលក្លោងទ្វារចូលទៅកាន់ប្រាសាទចំនួន ៥ទៀត សរុបទាំងអស់ ៥៤ កំពូល ដែលតំណាងឲ្យខេត្តក្រុងខ្មែរទាំង៥៤នៅសម័យកាលនោះ។ មានអ្នកប្រាជ្ញមួយចំនួនបានគិតថា មុខទាំង៤ នោះតំណាងឲ្យព្រះពោធិសត្វលោកេស្វរៈ នៃព្រះពុទ្ធសាសនាមហាយាន អ្នកខ្លះទៀត គិតថាជារូបតំណាងព្រះបាទជ័យវរ្ម័នទី៧។ ...
                 <span class="read-more" >
@@ -60,7 +60,7 @@
             <span class="btn btn-outline-primary read-more-btn w-25 p-0 m-0" >អានបន្ត...</span>
             </div>
             <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 mt-2">
-                <div class="card">
+                <div class="card mb-3">
                     <div class="card-header bg-danger text-white">
                         <h5 class="mb-0 py-1  text-light ">រឿងរ៉ាវដែលអ្នកត្រូរដឹងអំពីប្រាសាទបាយ័ន!</h5>
                     </div>
@@ -78,28 +78,28 @@
             <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12 mt-2">
                 <h4>ច្រើនទៀត...</h4>
                 <hr>
-                <div class="row align-items-center more mb-3 m-0 p-0 border border-1 border-primary rounded">
+                <div class="row align-items-center more mb-3 m-0 p-0 border border-1 border-secondary rounded">
                     <div class="col-xxl-6 col-xl-6 col-lg-5 col-md-4 col-4 mini-img m-0 p-0 ">
                         <img src="./images/temple/angkor-wat-untold.jpg" alt="" class="rounded-start">
                     </div>
                     <div class="col-xxl-6 col-xl-6 col-lg-7 col-md-8 col-8  ">
-                        <a href="./angkorwat.html">ប្រាសាទអង្គរវត្ត</a>
+                        <a href="./angkorwat.html" class="text-secondary" >ប្រាសាទអង្គរវត្ត</a>
                     </div>
                 </div>
-                <div class="row align-items-center more mb-3 m-0 p-0 border border-1 border-primary rounded">
+                <div class="row align-items-center more mb-3 m-0 p-0 border border-1 border-secondary rounded">
                     <div class="col-xxl-6 col-xl-6 col-lg-5 col-md-4 col-4 mini-img m-0 p-0 ">
                         <img src="./images/temple/banteay_srey.jpg" alt="" class="rounded-start">
                     </div>
                     <div class="col-xxl-6 col-xl-6 col-lg-7 col-md-8 col-8">
-                        <a href="./banteaysrey.html">ប្រាសាទបន្ទាយស្រី</a>
+                        <a href="./banteaysrey.html" class="text-secondary" >ប្រាសាទបន្ទាយស្រី</a>
                     </div>
                 </div>
-                <div class="row align-items-center more mb-3 m-0 p-0 border border-1 border-primary rounded">
+                <div class="row align-items-center more mb-3 m-0 p-0 border border-1 border-secondary rounded">
                     <div class="col-xxl-6 col-xl-6 col-lg-5 col-md-4 col-4 mini-img m-0 p-0 ">
                         <img src="./images/nature/quadBike.png" alt="" class="rounded-start" >
                     </div>
                     <div class="col-xxl-6 col-xl-6 col-lg-7 col-md-8 col-8  ">
-                        <a href="./nature.html">តំបន់ទេសចរណ៍ធម្មជាតិ</a>
+                        <a href="./nature.html" class="text-secondary" >តំបន់ទេសចរណ៍ធម្មជាតិ</a>
                     </div>
                 </div>
             </div>
