--- a/angkorwat.html
+++ b/angkorwat.html
@@ -45,7 +45,7 @@
             <a href="./index.html#temple" class="btn btn-outline-primary d-flex align-items-center"><i class="fa-solid fa-arrow-left"></i>  &nbsp;ត្រឡប់ក្រោយ</a>
         </div>
         <div class="row">
-            <div class="col-xxl-5 col-xl-5 col-lg-5 col-md-12 col-sm-12 col-12 mt-2 content">
+            <div class="col-xxl-5 col-xl-5 col-lg-5 col-md-12 col-sm-12 col-12 mt-2 mb-3 content">
                 <img src="./images/temple/angkorwat.jpg" alt="" class="img-fluid rounded mb-3">
                 <p>អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួមខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដឺ ហ្គោល។​ ប្រាសាទដែលមាន​ប្រជាប្រិយជាងគេ​ក្នុងប្រទេសកម្ពុជានេះ ត្រូវបានគេស្គាល់​ថា​ជាប្រាសាទព្រហ្មញ្ញសាសនាដ៏​ធំបំផុត បានកសាងដើម្បី​ឧទ្ទិសដល់ព្រះវិស្ណុ ក្រោមស្នាដៃ​​ ព្រះបាទសូរ្យវរ្ម័នទី២ នៅដើម​សតវត្សទី១២ ដែលស្ថិតនៅក្នុងរាជធានី​យសោធរបុរៈ​(សម័យបច្ចុប្បន្នអង្គរ)។ ...
                 <span class="read-more">
@@ -57,7 +57,7 @@
                 <span class="btn btn-outline-primary read-more-btn w-25 p-0 m-0" >អានបន្ត...</span>
             </div>
             <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 mt-2">
-                <div class="card">
+                <div class="card mb-3">
                     <div class="card-header border border-5 border-danger bg-danger text-white" style="outline: none;" >
                         <h5 class="mb-0 py-1  text-light">រឿងរ៉ាវដែលអ្នកត្រូរដឹងអំពីប្រាសាទអង្គរវត្ត!</h5>
                     </div>
@@ -76,30 +76,30 @@
                 </div>
             </div>
             <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12 mt-2">
-                <h4>ច្រើនទៀត...</h4>
+                <h4 class="mb-0 pb-0" >ច្រើនទៀត...</h4>
                 <hr>
-                <div class="row align-items-center more mb-3 m-0 p-0 border border-1 border-primary rounded">
+                <div class="row align-items-center more mb-3 m-0 p-0 border border-1 border-secondary rounded">
                     <div class="col-xxl-6 col-xl-6 col-lg-5 col-md-4 col-4 mini-img m-0 p-0 ">
                         <img src="./images/temple/bayon.jpg" alt="" class="rounded-start">
                     </div>
                     <div class="col-xxl-6 col-xl-6 col-lg-7 col-md-8 col-8  ">
-                        <a href="./bayon.html">ប្រាសាទបាយ័ន</a>
+                        <a href="./bayon.html" class="text-secondary" >ប្រាសាទបាយ័ន</a>
                     </div>
                 </div>
-                <div class="row align-items-center more mb-3 m-0 p-0 border border-1 border-primary rounded">
+                <div class="row align-items-center more mb-3 m-0 p-0 border border-1 border-secondary  rounded">
                     <div class="col-xxl-6 col-xl-6 col-lg-5 col-md-4 col-4 mini-img m-0 p-0 ">
                         <img src="./images/temple/banteay_srey.jpg" alt="" class="rounded-start">
                     </div>
                     <div class="col-xxl-6 col-xl-6 col-lg-7 col-md-8 col-8">
-                        <a href="./banteaysrey.html">ប្រាសាទបន្ទាយស្រី</a>
+                        <a href="./banteaysrey.html" class="text-secondary" >ប្រាសាទបន្ទាយស្រី</a>
                     </div>
                 </div>
-                <div class="row align-items-center more mb-3 m-0 p-0 border border-1 border-primary rounded">
+                <div class="row align-items-center more mb-3 m-0 p-0 border border-1 border-secondary rounded">
                     <div class="col-xxl-6 col-xl-6 col-lg-5 col-md-4 col-4 mini-img m-0 p-0 ">
                         <img src="./images/nature/quadBike.png" alt="" class="rounded-start" >
                     </div>
                     <div class="col-xxl-6 col-xl-6 col-lg-7 col-md-8 col-8  ">
-                        <a href="./nature.html">តំបន់ទេសចរណ៍ធម្មជាតិ</a>
+                        <a href="./nature.html"class="text-secondary" >តំបន់ទេសចរណ៍ធម្មជាតិ</a>
                     </div>
                 </div>
             </div>
@@ -111,7 +111,7 @@
                     <a  href="#" class="close d-flex align-items-center"><i class="fa-solid fa-xmark"></i></a>
                 </div>
                 <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12">
-                    <h5 class="alert alert-secondary" >១. ជាបូជនីយដ្ឋានសាសនាធំជាងគេបំផុតលើលោក</h5>
+                    <h5 class="alert alert-secondary">១. ជាបូជនីយដ្ឋានសាសនាធំជាងគេបំផុតលើលោក</h5>
                     <img src="./images/mustknow/angkorwat-1.jpg" alt="" class="object-fit-cover" height="250" width="100%" >
                     <p>យោងតាមកំណត់ត្រាហ្គីនណេសពិភពលោក (Guinness World Record) ប្រាសាទអង្គរវត្ដត្រូវបានចាត់ទុកជាទីបូជនីយដ្ឋានខាងសាសនាធំជាងគេបំផុតក្នុងពិភពលោកបើប្រៀបធៀបនឹងប្រាសាទបុរាណជាច្រើនទៀតនៃប្រទេសផ្សេងៗ។ វាលាតសន្ធឹងលើផ្ទៃដី២៤,៨ គ.ម. ជាមួយនឹងផ្ទៃក្រឡា ១.៦២៦.០០០ ម៉ែត្រការេ។ ប្រាសាទអង្គរវត្តត្រូវបានរកឃើញឡើងវិញ​ដោយ ធម្មជាតិវិទូបារាំងលោក ហង់ហ្រ៊ី មូហ៊ូត (Henri Mouhot) នៅឆ្នាំ១៨៦០។</p>
                 </div>
